ATS-M thinks it has display
Various display errors like here seen in CI: https://intel-gfx-ci.01.org/tree/intel-xe/xe-pw-117239v1/bat-atsm-2/igt@xe_module_load@load.html
AFAIK ATS-M lacks display HW, but xe_display_info_init() looks to not set info.enable_display=false, like on PVC, given that DG2 and ATS-M are treated the same.
Edited by Matthew Auld