drm/xe/display: Consider has_display to enable it

Stop the dance of enabling the display-related driver_features to later
disable them on display info init if the platform doesn't have display
IP. Besides being needless work, it wasn't covering the ATS-M case that
is the same platform as DG2, but without display.

Since now the display is created after the complete device info is
populated, the new has_display flag can be consider to enable it.

References: https://gitlab.freedesktop.org/drm/xe/kernel/-/issues/265
Reviewed-by: Matt Atwood <matthew.s.atwood@intel.com>
Acked-by: José Roberto de Souza <jose.souza@intel.com>
Acked-by: Jani Nikula <jani.nikula@intel.com>
Link: https://lore.kernel.org/r/20230510195424.3045127-4-lucas.demarchi@intel.com
Signed-off-by: Lucas De Marchi <lucas.demarchi@intel.com>